--- a/guestbook/pom.xml
+++ b/guestbook/pom.xml
@@ -23,148 +23,101 @@
 
   <dependencies>
 	<dependency>
-
       <groupId>junit</groupId>
-
       <artifactId>junit</artifactId>
-
       <version>4.12</version>
-
     </dependency>
 
+<dependency>
+    <groupId>com.jayway.jsonpath</groupId>
+    <artifactId>json-path</artifactId>
+    <version>2.4.0</version>
+</dependency>
     <dependency>
-
         <groupId>org.mockito</groupId>
-
         <artifactId>mockito-core</artifactId>
-
         <version>1.9.5</version>
-
     </dependency>
-
 <dependency>
-
     <groupId>javax.servlet</groupId>
-
     <artifactId>javax.servlet-api</artifactId>
-
     <version>3.1.0</version>
-
     <scope>provided</scope>
-
     </dependency>
 
-  
     <dependency>
-
     <groupId>javax.servlet.jsp</groupId>
-
     <artifactId>javax.servlet.jsp-api</artifactId>
-
     <version>2.3.1</version>
-
     <scope>provided</scope>
-
     </dependency>
 
   <dependency>
-
 <groupId>jstl</groupId>
-
 <artifactId>jstl</artifactId>
-
 <version>1.2</version>
-
 </dependency>
+
 <dependency>
-
       <groupId>org.springframework</groupId>
-
       <artifactId>spring-context</artifactId>
-
       <version>${spring.version}</version>
-
     </dependency>
 
   <dependency>
-
       <groupId>org.springframework</groupId>
-
       <artifactId>spring-test</artifactId>
-
       <version>${spring.version}</version>
-
     </dependency>
 
   <dependency>
-
       <groupId>org.springframework</groupId>
-
       <artifactId>spring-webmvc</artifactId>
-
       <version>${spring.version}</version>
-
     </dependency>
-
-    <dependency>
-
-    <groupId>org.springframework</groupId>
-
-    <artifactId>spring-jdbc</artifactId>
-
-    <version>${spring.version}</version>
-
-    </dependency>
-
     
-
     <dependency>
-
     <groupId>org.springframework</groupId>
-
-    <artifactId>spring-tx</artifactId>
-
+    <artifactId>spring-jdbc</artifactId>
     <version>${spring.version}</version>
-
+    </dependency>
+    
+    <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-tx</artifactId>
+    <version>${spring.version}</version>
     </dependency>
 <dependency>
-
     <groupId>mysql</groupId>
-
     <artifactId>mysql-connector-java</artifactId>
-
-    <version>8.0.18</version>
-
+    <version>8.0.27</version>
 </dependency>
 
 <dependency>
-
     <groupId>org.apache.commons</groupId>
-
     <artifactId>commons-dbcp2</artifactId>
-
     <version>2.1.1</version>
-
     </dependency>
 
     <dependency>
-
     <groupId>com.fasterxml.jackson.core</groupId>
-
     <artifactId>jackson-databind</artifactId>
-
     <version>${jackson2.version}</version>
 
     </dependency>
+    <dependency>
+    <groupId>com.jayway.jsonpath</groupId>
+    <artifactId>json-path</artifactId>
+    <version>2.4.0</version>
+	</dependency>
+	
+	
 <dependency>
-
     <groupId>com.fasterxml.jackson.datatype</groupId>
-
     <artifactId>jackson-datatype-jdk8</artifactId>
-
     <version>${jackson2.version}</version>
-
     </dependency>
+    
 </dependencies>
   <build>
     <finalName>guestbook</finalName>
