--- a/instagram-clone-main/instagram-clone-main/.classpath
+++ b/instagram-clone-main/instagram-clone-main/.classpath
@@ -24,6 +24,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/CodeWise/OneDrive - 몽타 주식회사/바탕 화면/Project/Backend-Study/mysql-connector-java-8.0.27.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
